sample/msvc/error/c2735.cpp
// C2735.cpp
void f(inline int){}   // C2735
